feat(logger): Add logging functionality
- Added a new logger_utils module to handle logging
- Created a get_logger function to retrieve the logger instance
- The logger is configured to log messages with timestamps and colored output
- Log messages are printed to the console and saved in log files under the "logs" folder
- Updated MyGesScraper class in myges_scrapper.py to use the logger instead of print statements

--- a/.gitignore
+++ b/.gitignore
@@ -291,7 +291,7 @@ poetry.toml
 # ruff
 .ruff_cache/
 
-# LSP config files
+# LSP utils files
 pyrightconfig.json
 
 ### VisualStudioCode ###
@@ -323,10 +323,7 @@ ehthumbs_vista.db
 # Dump file
 *.stackdump
 
-# Configuration files for MyGes
-config.json
-
-# Folder config file
+# Folder utils file
 [Dd]esktop.ini
 
 # Recycle Bin used on file shares
@@ -341,5 +338,14 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# Configuration files for MyGes
+config.json
+
+# Logs folder
+logs/
+
+# Logs files
+*.log
 
 # End of https://www.toptal.com/developers/gitignore/api/python,windows,macos,intellij+all,visualstudiocode
