--- a/.gitignore
+++ b/.gitignore
@@ -348,6 +348,6 @@ logs/
 # Logs files
 *.log
 
-data/out
+data/*/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,windows,macos,intellij+all,visualstudiocode
