feat(api): Add login and schedule endpoints to MyGes API
This commit adds two new endpoints to the MyGes API: `/myges/login` and `/myges/week/<date_string>`. The `/login` endpoint allows users to log in to their MyGes account using a username and password, while the `/week/<date_string>` endpoint retrieves the schedule for a specific week based on the provided date string. Additionally, this commit includes some minor code refactoring and dependency updates.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
 beautifulsoup4==4.9.3
 selenium==3.141.0
 requests==2.26.0
-jsonschema==3.2.0
-discord.py==1.7.3
+# jsonschema==3.2.0
+# discord.py==1.7.3
 Flask==2.0.1
+Werkzeug==2.0.1
 Flask-RESTful==0.3.9
-icalendar==4.0.7
+flask-restx==0.5.1
+# icalendar==4.0.7
 PyQt5
-google-api-python-client==2.11.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.4
-google-auth==1.34.0
-httplib2==0.19.1
-oauthlib==3.1.1
-pytest==6.2.4
+# google-api-python-client==2.11.0
+# google-auth-httplib2==0.1.0
+# google-auth-oauthlib==0.4.4
+# google-auth==1.34.0
+# httplib2==0.19.1
+# oauthlib==3.1.1
+# pytest==6.2.4
 coloredlogs==15.0.1
