--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ beautifulsoup4==4.9.3
 selenium==3.141.0
 requests==2.26.0
 # jsonschema==3.2.0
-# discord.py==1.7.3
+discord.py==2.3.1
 Flask==2.0.1
 Werkzeug==2.0.1
 Flask-RESTful==0.3.9
